# tensorshare

./: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci-cd.yaml
api/constants/: index.html
api/prepare_tensors/: index.html
api/processor/: index.html
api/serialization/: index.html
api/tensorshare/: index.html
api/tensorshare_client/: index.html
api/tensorshare_server/: index.html
docs/: index.md  installation.md  license.md  usage.md
docs/api/: constants.md  prepare_tensors.md  processor.md  schema.md  serialization.md  tensorshare.md  tensorshare_client.md  tensorshare_server.md
docs/usage/: backends.md  fastapi_integration.md  introduction.md  tensorshare.md  tensorshare_client.md  tensorshare_server.md
installation/: index.html
license/: index.html
notebooks/: package_test.ipynb
search/: search_index.json
src/tensorshare/: __init__.py  client.py  import_utils.py  logging.py  logging.pyi  schema.py  server.py  utils.py
src/tensorshare/client/: __init__.py  async_client.py  base.py  client.py  utils.py
src/tensorshare/converter/: __init__.py  interface.py  utils.py  utils.pyi
src/tensorshare/serialization/: __init__.py  constants.py  flax.py  interface.py  numpy.py  paddle.py  processor.py  tensorflow.py  torch.py  utils.py  utils.pyi
tests/: conftest.py  fastapi_example.py  server.py  test_client.py  test_client_lib.py  test_import_utils.py  test_schema.py  test_server.py  test_utils.py
tests/client/: test_client.py  test_utils.py
tests/converter/: test_interface.py  test_utils.py
tests/serialization/: test_constants.py  test_processor.py  test_serialization_methods.py  test_utils.py
usage/backends/: index.html
usage/fastapi_integration/: index.html
usage/introduction/: index.html
usage/tensorshare/: index.html
usage/tensorshare_client/: index.html
usage/tensorshare_server/: index.html
